[package]
name = "crx_wdx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
serde_json = "1.0"
